--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     androidTestImplementation libs.androidx.ui.test.junit4
     debugImplementation libs.androidx.ui.tooling
     debugImplementation libs.androidx.ui.test.manifest
+    implementation libs.androidx.lifecycle.livedata.ktx
 
     // Для навигашион
     implementation libs.androidx.navigation.compose
@@ -77,6 +78,10 @@ dependencies {
     // Цикл
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.lifecycle.viewmodel.compose
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation "androidx.compose.runtime:runtime:1.6.7"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.7"
+    implementation "androidx.compose.runtime:runtime-rxjava2:1.6.7"
 
     // Картиночки
     implementation libs.coil.compose
