--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
     // Корутины
     implementation libs.kotlinx.coroutines.android
 
+    //Криптография
+    implementation "org.mindrot:jbcrypt:0.4"
+
 }
